--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,32 @@
             <h2 class="info">A POrtfolio of Our Work</h2>
             <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </p>
         </div>
+        <div class="portfolio-head">
+            <ul>
+                <li>All</li>
+                <li>Exterior</li>
+                <li>Interior</li>
+                <li>Furniture</li>
+            </ul>
+        </div>
 
-        <div class="portfolio-img"></div>
+        <div class="portfolio-img">
+            <div class="row-1">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="row-2">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="row-3">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="porfolio-button">
+            </div>
+        </div>
     </div>
 
     <footer>
